# aat-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 01_basic_usage.ipynb  02_promt_eda.ipynb  03_chat_elemnts.ipynb  04_test_run_time.ipynb  05_get_infomation.ipynb  06_chat_element_in_chatbox.ipynb
scripts/: main.py  test_run.py
src/chat/: chat_elements copy.py  chat_elements.py  llm_chat copy.py  llm_chat.py
src/prompts/: __init__.py  generate_python.py
src/run_time/: __init__.py  python.py
src/utils/: parsers.py  run_time.py
