[tool.poetry]
name = "edaai"
version = "0.1.0"
description = ""
authors = ["Oz Mendelsohn <oz.mendelsohn@gmail.com>"]
readme = "README.md"
packages = [{include = "src"},
            {include = "chat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
panel = "^1.1.1"
jupyterlab = "^4.0.2"
numpy = "^1.25.0"
pandas = "^2.0.2"
plotly = "^5.15.0"
langchain = {path = "../langchain", develop = true}
openai = "^0.27.8"
statsmodels = "^0.14.0"
seaborn = "^0.12.2"
holoviews = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
